# EpicFreeGames

./: .1password.env  .dockerignore  .gitignore  .prettierignore  .prettierrc  Cargo.toml  Dockerfile  LICENSE  README.md  api.code-workspace  bot.code-workspace  bun.lockb  clean.sh  crowdin.yml  dash.code-workspace  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-staging.yml  docker-compose.yml  fly.toml  next-dash.code-workspace  nginx-dev.conf  nginx.conf  not-quite-zero-downtime-depl.sh  package.json  prettier.config.js  prettier.plugins.js  turbo.json  twilight-rs--http-proxy.Dockerfile  velociraptor.yml  wait.sh
api/: .prettierrc  Cargo.toml  Dockerfile  Dockerfile.dev  package.json  tsconfig.json
api/prisma/: schema.prisma
api/src/: config.ts  index.ts  main.rs  redis.ts  server.ts  types.rs  types.ts
api/src/auth/: authUtils.ts  cookie.ts  endpointAuth.ts  flags.ts  jwt.ts  perms.ts  socketAuth.ts
api/src/auth/jwt/: jwt.ts  jwtWhitelist.ts  types.ts
api/src/data/: redis.ts
api/src/endpoints/: discord.rs
api/src/mails/: register.ts
api/src/plugins/: mailerPlugin.ts  prismaPlugin.ts
api/src/routes/: auth.ts  currencies.ts  dashboard.ts  email.ts  games.ts  logs.ts  sends.ts  servers.ts  users.ts  ws.ts
api/src/utils/: auth.ts  crypto.ts  emailVerification.ts  flags.ts  jsonfix.ts  jwt.ts  withValidation.ts  zodToJson.ts
api/src/websocket/: handler.ts  types.ts  utils.ts  websocket.ts
backend/: .1password.env  Cargo.toml  Dockerfile  bun.lockb  dev.md  docker-compose.yml  package.json  pnpm-lock.yaml  prettier.config.js  prettier.config.ts  prettier.plugins.js  tsconfig.json
backend/api/: Cargo.toml
backend/api/src/: main.rs  session.rs  types.rs
backend/api/src/auth/: middleware.rs  mod.rs  session_token.rs  types.rs
backend/api/src/endpoints/: discord.rs  games.rs  mod.rs
backend/api/src/endpoints/auth/: discord.rs  mod.rs  session.rs
backend/api/src/endpoints/i18n/: languages.rs
backend/config/: Cargo.toml
backend/config/src/: lib.rs
backend/data/: Cargo.toml
backend/data/src/: types.rs
backend/data/src/games/: games.rs  games_cache.rs  games_types.rs  mod.rs
backend/discord/: Cargo.toml
backend/discord/src/: http_handlers.rs  lib.rs
backend/discord/src/commands/guild/: mod.rs  set_channel_command.rs  settings_command.rs
backend/discord/src/commands/no_guild/: free_command.rs  up_command.rs
backend/discord/src/embeds/: embed_utils.rs  error_embeds.rs  game_embed.rs  help_embed.rs
backend/discord/src/sender/: sender.rs
backend/discord/src/types/: exports.rs  mod.rs
backend/entity/src/: api_user.rs  game.rs  game_price.rs  lib.rs  mod.rs  prelude.rs  server.rs  session.rs
backend/handlers/: Cargo.toml
backend/handlers/src/: discord.rs  lib.rs  types.rs
backend/handlers/src/i18n/: languages.rs
backend/i18n/src/: languages.rs  types.rs
backend/i18n/t10s/hu/: messages.json
backend/prisma/: schema.prisma
backend/slash-commands/src/: slash_commands.rs
backend/src/: auth.ts  ctx.ts  index.ts  logger.ts  redirector.ts  rootRouter.ts  trpc.ts  utils.ts
backend/src/configuration/: constants.ts  env.ts
backend/src/db/: db.ts  types.ts
backend/src/discord/: autocompleteHandler.ts  commandHandler.ts  context.ts  discordApi.ts  discordApiRequest.ts  discordHandler.ts  discordPerms.ts  discordUtils.ts  interactionHandler.ts  requestHandler.ts  sender.ts  utils.ts  verifyRequest.ts
backend/src/discord/commands/: _commandType.ts  _getTypedOption.ts  commandHandler.ts  debugCommand.ts  freeCommand.ts  helpCommand.ts  inviteCommand.ts  settingsCommand.ts  testCommand.ts  upCommand.ts
backend/src/discord/commands/adminCommands/: gamesCommand.ts  sendCommand.ts
backend/src/discord/commands/noGuildCommands/: freeCommand.ts  helpCommand.ts  inviteCommand.ts  upCommand.ts
backend/src/discord/commands/removeCommand/: removeChannelSubCommand.ts  removeCommand.ts  removeRoleSubCommand.ts
backend/src/discord/commands/setCommand/: _utils.ts  setChannelSubCommand.ts  (+2 more)
backend/src/discord/embeds/: debug.ts  errors.ts  game.ts  gameEmbed.ts  help.ts  invite.ts  setChannel.ts  settings.ts
backend/src/discord/i18n/: currency.ts  language.ts  translations.ts
backend/src/discord/perms/: calcPermissionBitsFromStrings.ts  hasPerms.ts  hasPermsOnChannel.ts  types.ts
backend/src/discord/sender/: messageSender.ts  sender.ts  senderLog.ts  webhookSender.ts
backend/src/routers/: auth-router.ts  games-router.ts  send-router.ts  support-router.ts
data/: Cargo.toml
data/src/: lib.rs  types.rs
data/src/games/: games_cache.rs  games_types.rs  mod.rs
database/: Cargo.toml
database/src/: lib.rs  types.rs
discord/: Cargo.toml
discord/src/: http_handlers.rs
discord/src/commands/: mod.rs
discord/src/commands/guild/: mod.rs
discord/src/commands/no_guild/: free_command.rs  help_command.rs  mod.rs  up_command.rs
discord/src/embeds/: embed_utils.rs  game_embed.rs  help_embed.rs  mod.rs  settings_embed.rs
discord/src/types/: exports.rs  interaction.rs  mod.rs
entity/: Cargo.toml
entity/src/: command_log.rs  game_price.rs  lib.rs  mod.rs  prelude.rs  sending.rs  sending_log.rs  server.rs
rust-api/data/: Cargo.toml
rust-api/data/src/games/: games_cache.rs  games_types.rs  mod.rs
rust-api/database/: Cargo.toml
rust-api/database/src/: lib.rs  types.rs
rust-api/database/src/methods/: game.rs  mod.rs  user.rs
rust-api/database/src/models/: game.rs  mod.rs  user.rs
rust-api/discord/: Cargo.toml
rust-api/discord/src/: http_handlers.rs  lib.rs  translate.rs
rust-api/discord/src/commands/: mod.rs
rust-api/discord/src/embeds/: error_embeds.rs  game_embed.rs  mod.rs
rust-api/discord/src/types/: bot.rs  embed.rs
rust-api/discord/t10s/af/: commands.json
rust-api/discord/t10s/fr/: commands.json
rust-api/discord/t10s/pt-BR/: commands.json
rust-api/handlers/: Cargo.toml
rust-api/handlers/src/: discord.rs  lib.rs
slash-commands/: Cargo.toml  bun.lockb  package.json  pnpm-lock.yaml
slash-commands/src/: commands.ts  env.ts  index.ts  main.rs  slash_commands.rs
(+1288 files in other folders)
