[profile.release]
strip = true
lto = true

[workspace]

members = [
    "data",
    "handlers",
    "api",
    "discord",
    "slash-commands"
]

[workspace.dependencies]
once_cell = "1.17.1"
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.93"
uuid = { version = "1.3.0", features = [ "v4" ] }
thiserror = "1.0.38"
anyhow = { version = "1.0.69" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
sea-orm = { version = "0.11.1", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
twilight-http = "0.15.1"
twilight-model = "0.15.1"
tokio = { version = "1.25.0", features = ["full"] }
