[package]
name = "data"
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
sea-orm = { version = "0.11.1", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
entity = { path = "../entity" }
config = { path = "../config" }