[package]
name = "discord"
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
sea-orm = { workspace = true }
twilight-http = "0.15.1"
data = { path = "../data" }
entity = { path = "../entity" }
config = { path = "../config" }
i18n = { path = "../i18n" }
ed25519-dalek = "1.0.1"
hex = "0.4.3"
twilight-model = "0.15.1"
bitflags = "2.0.1"