[package]
name = "slash-commands"
version = "0.0.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
twilight-http = { workspace = true }
twilight-model = { workspace = true }
tokio = { workspace = true }
config = { path = "../config" }
i18n = { path = "../i18n" }