[package]
name = "api"
version = "0.0.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }
data = { path = "../data" }
entity = { path = "../entity" }
handlers = { path = "../handlers" }
discord = { path = "../discord" }
config = { path = "../config" }
i18n = { path = "../i18n" }
axum = { version = "0.6.15", features = [ "headers" ]}
hyper = "0.14.25"
tower = "0.4.13"
tower-http = { version = "0.3", features = [ "trace", "cors" ] }
ulid = "1"
