[package]
name = "config"
version = "0.0.0"
edition = "2021"

[dependencies]
once_cell = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
twilight-model = { workspace = true }
envy = "0.4.2"
