[package]
name = "database"
version = "0.0.0"
edition = "2021"

[dependencies]
config = { path = "../config" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls", "postgres", "chrono" ] }
futures = "0.3.17"