[package]
name = "discord"
version = "0.0.0"
edition = "2021"

[dependencies]
database = { path = "../database" }
data = { path = "../data" }
ed25519-dalek = "1.0.1"
hex = "0.4.3"
twilight-model = "0.15.1"
bitflags = "2.0.1"
chrono = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }