[package]
name = "handlers"
version = "0.0.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
database = { path = "../database" }
data = { path = "../data" }
discord = { path = "../discord" }
i18n = { path = "../i18n" }